<resources>
    <string name="app_name">Brew My Coffee</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="hint_username">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_pass">Confirm Password</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_set_home_loc">Set Home Location</string>
    <string name="password_does_not_match">Passwords do not match!</string>
    <string name="username_does_not_exist">The entered username does not exist</string>
    <string name="current_location">Current Location</string>
    <string name="internal_error">There was an internal error. Try again later</string>

    <!--String related to Maps -->

    <string name="action_settings">Setting</string>
    <string name="google_place_api">AIzaSyDf9DqOZRbs4YTNjPo7LyD_xIlbMmFC0os</string>

    <!--String related to php server-->
    <string name="app_name3">php_extended</string>

</resources>
